# spec-kitty-runtime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/prompts/: spec-kitty.analyze.prompt.md  spec-kitty.charter.prompt.md  spec-kitty.checklist.prompt.md  spec-kitty.clarify.prompt.md  spec-kitty.constitution.prompt.md  spec-kitty.implement.prompt.md  spec-kitty.merge.prompt.md  spec-kitty.plan.prompt.md  spec-kitty.review.prompt.md  spec-kitty.specify.prompt.md  spec-kitty.tasks-finalize.prompt.md  spec-kitty.tasks-outline.prompt.md  spec-kitty.tasks-packages.prompt.md  spec-kitty.tasks.prompt.md
.github/workflows/: acceptance.yml  publish-pypi.yml  publish-testpypi.yml
.kittify/: AGENTS.md  config.yaml  metadata.yaml  skills-manifest.json
.kittify/charter/: charter.md  context-state.json  directives.yaml  metadata.yaml
.kittify/overrides/: AGENTS.md
.kittify/workspaces/: 001-audit-primitive-decision-checkpoint-WP01.json  001-audit-primitive-decision-checkpoint-WP02.json  001-audit-primitive-decision-checkpoint-WP03.json  (+2 more)
contracts/: README.md
docs/: contracts.md  teamspace-migration-runtime-logs.md
tests/: test_audit_engine.py  test_audit_planner.py  test_audit_schema.py  test_compat_diagnostics.py  test_contract_parity.py  test_contracts.py  test_determinism.py  test_discovery.py  test_engine.py  test_event_payloads_wp03.py  test_events.py  test_planner.py  test_raci.py  test_replay.py  test_scoring_engine_wp02.py  test_scoring_fixtures_wp06.py  test_significance.py  test_significance_integration.py  test_significance_integration_wp05.py  test_significance_timeout.py  test_teamspace_migration.py  test_timeout_escalation_wp04.py  test_transition_gate_wp02.py
(+150 files in other folders)
